[gd_scene load_steps=6 format=3 uid="uid://de035ofv3cyle"]

[ext_resource type="Script" uid="uid://c8aovkt3kq6t6" path="res://Scenes/PartySelect.gd" id="1_vmcsu"]
[ext_resource type="PackedScene" uid="uid://0uctkbn3mrjl" path="res://Scenes/battle_scene.tscn" id="2_3te4q"]
[ext_resource type="Script" uid="uid://d318qe4le8u2u" path="res://Scenes/PartySlots.gd" id="2_ca33b"]
[ext_resource type="Texture2D" uid="uid://diwh8vjog2tfj" path="res://Inventory/inventory-slot.png" id="3_3te4q"]
[ext_resource type="Script" uid="uid://bahvui3tuexwf" path="res://SlotButton.gd" id="4_t5ays"]

[node name="PartySelect" type="Control"]
z_index = 100
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_vmcsu")
BattleScene = ExtResource("2_3te4q")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="PartySlots" type="HBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -68.0
offset_right = 104.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_ca33b")
party_slots_path = NodePath(".")
confirm_button_path = NodePath("../ConfirmButton")

[node name="TextureRect" type="TextureButton" parent="CenterContainer/Panel/PartySlots"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_3te4q")
stretch_mode = 5
script = ExtResource("4_t5ays")
slot_index = 13

[node name="TextureRect2" type="TextureButton" parent="CenterContainer/Panel/PartySlots"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_3te4q")
stretch_mode = 5
script = ExtResource("4_t5ays")
slot_index = 14

[node name="TextureRect3" type="TextureButton" parent="CenterContainer/Panel/PartySlots"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_3te4q")
stretch_mode = 5
script = ExtResource("4_t5ays")
slot_index = 1

[node name="ConfirmButton" type="Button" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(200, 64)
layout_mode = 0
offset_left = -96.0
offset_top = 28.0
offset_right = 104.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 40
text = "Confirm?
"

[node name="Label" type="Label" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -320.0
offset_top = -188.0
offset_right = 323.0
offset_bottom = -133.0
theme_override_font_sizes/font_size = 40
text = "SELECT YOUR PARTY FOR BATTLE!"
